# reinforcement-learning-dagster

./: manage_db.py  pyproject.toml  rl_eligibility_data.csv
data/: data.db  wallflower_bonus_bandit.pkl
reinforcement_learnin_dagster/assets/personalized_pricing/: __init__.py
rl_dagster/: __init__.py
rl_dagster/assets/personalized_pricing/: __init__.py  _assets.py  _resources.py  _sensors.py  _simulate_margin.py
tests/personalized_pricing_tests/: test_personalized_pricing.py
